Accessing evaluated depsgraph data from Python leaks memory #92136

Closed
opened 2021-10-12 11:19:01 +02:00 by Campbell Barton · 8 comments

With this file derived_bug.blend, run the script "Text".

While this script runs memory use increases, on my system to rises from around 300 - 400mb.

The leak can also be demonstrated by enabling WITH_PYTHON_SAFETY causing the leaks to be reported on exit.

Afterwards, loading a new file doesn't clear the memory.

This happens with 2.93 and 3.0 eb8afc39f858ca397e53fc8cd36b3ebc0024476e.


Reporting for reference, I have a fix prepared.

With this file [derived_bug.blend](https://archive.blender.org/developer/F11001788/derived_bug.blend), run the script "Text". While this script runs memory use increases, on my system to rises from around 300 - 400mb. The leak can also be demonstrated by enabling `WITH_PYTHON_SAFETY` causing the leaks to be reported on exit. Afterwards, loading a new file doesn't clear the memory. This happens with 2.93 and 3.0 `eb8afc39f858ca397e53fc8cd36b3ebc0024476e`. ---- Reporting for reference, I have a fix prepared.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 0558907ae6

This issue was referenced by 0558907ae674ebe81dc8910a6615fc32ce675d70
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-10-13 12:01:16 +02:00

This issue was referenced by 8c0698460b

This issue was referenced by 8c0698460be9e435560b0b00474900492a614ac0
Author
Owner

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This issue was referenced by 356dce13f0

This issue was referenced by 356dce13f05faed5303ac1aacf68dc6c1ff51d80
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92136
No description provided.