Fix T92136: Leak accessing evaluated depsgraph data from Python