source/blender/depsgraph/intern/eval/deg_eval_runtime_backup.cc
@@ -52,7 +52,9 @@ void RuntimeBackup::init_from_id(ID *id)
   }
   have_backup = true;
 
+  /* Clear, so freeing the expanded data doesn't touch this Python reference. */
   id_data.py_instance = id->py_instance;
+  id->py_instance = nullptr;
 
   animation_backup.init_from_id(id);
 
